This this the changelog file for the SoapyIris project.

Release 2019.01.0.1 (pending)
==========================

- Increase stream buffer to support 8kib jumbo packets
- Embed a route into the Tx packet header for hub support

Release 2018.12.0.1 (2018-12-27)
==========================

- Added --img support for flasher script
- TDD mode settings for streaming with TDD framer module

Release 2018.08.0.1 (2018-08-28)
==========================

- Converter support for dual channel complex 8-bit streaming
- Switch to TWBW64 framing mode for Rx/Tx streams + status
- Remove driver series check, just compare firmware vs FPGA.
  The print was basically always out of date and we just need
  to confirm that the streaming protocol is actually matched.

Release 2018.05.0.2 (2018-08-28)
==========================

- Fixed writeBuffer() loop for SOAPY_SDR_WAIT_TRIGGER flag
  The flag should be cleared for subsequent loop iterations

Release 2018.05.0.1 (2018-05-01)
==========================

- Release for matching version checks 2018.05.0.*

Release 2018.04.0.1 (2018-04-12)
==========================

- support timeout keyword in args (same as remote:timeout)
- attempt to use soapyremote 0.7 feature stream bypass

Release 2018.03.0.2 (2018-04-12)
==========================

- fixed multi-buffer readStream accounting
- use multi-buffer reads/writes in example

Release 2018.03.0.1 (2018-03-21)
==========================

- configurable ethernet mtu for stream args (MTU key)

Release 2018.02.0.1 (pending)
==========================

- regex is broken in gcc < 4.9, ignore the version parsing
- Version update to match firmware from February 2018

Release 2018.01.0.1 (pending)
==========================

- try/catch for version parser in case of failure
- Version update to match firmware from January 2018

Release 2017.11.0.2 (pending)
==========================

- Added read/writeStream loop support for full contiguous buffers

Release 2017.11.0.1 (pending)